codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_unknown_end_with_active_exploring_cell.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 718
expression: snapshot
---
History:
• Ran echo repro-marker
  └ repro-marker

Active:
• Exploring · 1 active · 0 done
  └ Reading null
